<resources>
    <string name="app_name">ComanyMeetingScheduler</string>
    <string name="back">BACK</string>
    <string name="schedule_a_meeting">SCHEDULE A MEETING</string>
    <string name="meeting_date">Meeting Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="description">Description</string>
    <string name="submit">SUBMIT</string>
    <string name="prev">PREV</string>
    <string name="next">NEXT</string>
    <string name="schedule_company_meeting">SCHEDULE COMPANY MEETING</string>
</resources>
