<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMeeting">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="start"
            android:background="@color/colorPrimary"
            android:elevation="@dimen/toolbar_elevation"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/lay_back"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_action_left" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20sp"
                        android:text="@string/back"
                        android:textColor="#FFFFFF" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="wrap_content"
                    android:layout_height="25sp"
                    android:layout_centerInParent="true"
                    android:text="@string/schedule_a_meeting"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"/>
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appBar"
        android:orientation="vertical"
        android:padding="12dp">

        <EditText
            android:id="@+id/edtMeetingDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_border_edittext"
            android:focusable="false"
            android:hint="@string/meeting_date"
            android:padding="12dp"
            android:drawableRight="@drawable/dropdown"/>

        <EditText
            android:id="@+id/edtStartTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_border_edittext"
            android:focusable="false"
            android:hint="@string/start_time"
            android:padding="12dp"
            android:drawableRight="@drawable/dropdown"/>

        <EditText
            android:id="@+id/edtEndTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_border_edittext"
            android:focusable="false"
            android:hint="@string/end_time"
            android:padding="12dp"
            android:drawableRight="@drawable/dropdown"/>

        <EditText
            android:id="@+id/edtDescription"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_border_edt_white_background"
            android:gravity="start"
            android:hint="@string/description"
            android:padding="12dp" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_background"
            android:text="@string/submit"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</RelativeLayout>