<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="start"
            android:background="@color/colorPrimary"
            android:elevation="@dimen/toolbar_elevation"
            app:popupTheme="@style/AppTheme.PopupOverlay">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
             <LinearLayout
                 android:id="@+id/lay_prev"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:layout_alignParentLeft="true"
                 android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:src="@drawable/ic_action_left"
                android:scaleType="fitXY"
                />
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="12sp"
                  android:text="@string/back"
                  android:textColor="#FFFFFF"/>
             </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_centerInParent="true">
                <TextView
                    android:id="@+id/txtDayName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="SUnday"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:visibility="gone"
                    />
                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="06-08-2015"
                    android:layout_centerInParent="true"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="16sp"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/lay_next"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_alignParentRight="true"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/next"
                        android:textColor="#FFFFFF"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_action_right" />
                </LinearLayout>
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_below="@+id/appBar">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            />
    </LinearLayout>
    <Button
        android:id="@+id/btn_schedule_meeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="#FFFFFF"
        android:text="@string/schedule_company_meeting"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_background"
        />
</RelativeLayout>